sources += files(
  'Settings.vala',

  # Accounts
  'Accounts/AccountHolder.vala',
  'Accounts/AccountStore.vala',
  'Accounts/InstanceAccount.vala',
  'Accounts/Places.vala',
  'Accounts/SecretAccountStore.vala',
  'Accounts/Mastodon/Account.vala',

  # Cache
  'Cache/AbstractCache.vala',
  'Cache/EntityCache.vala',
  'Cache/ImageCache.vala',

  # Network
  'Network/Network.vala',
  'Network/Request.vala',
  'Network/Streamable.vala',
  'Network/Streams.vala',
)