sources += files(
  'Base.vala',
  'Bookmarks.vala',
  'ContentBase.vala',
  'Conversations.vala',
  'Favorites.vala',
  'Federated.vala',
  'Hashtag.vala',
  'Home.vala',
  'List.vala',
  'Lists.vala',
  'Local.vala',
  'Main.vala',
  'Notifications.vala',
  'Profile.vala',
  'Search.vala',
  'Sidebar.vala',
  'TabbedBase.vala',
  'Thread.vala',
  'Timeline.vala',
)